# Financias

./: .gitignore  ARQUITECTURA.md  CLAUDE.md  COMPETENCIA.md  HOJA_DE_RUTA.md  INSTALACION_MAC.md  PLAN_PALETAS_GRAFICOS.md  PUBLICAR_VERSION.md  README.md  package-lock.json  package.json  skills-lock.json  vite.config.ts
.github/workflows/: build.yml
assets/: README.md
scripts/: dump.mjs  release.mjs
src/: App.tsx  index.css  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BarStyleMenu.tsx  CategoryFilter.tsx  CategoryManager.tsx  ColorModeMenu.tsx  ColorPicker.tsx  Controls.tsx  DateRangeMenu.tsx  EmptyState.tsx  ErrorBoundary.tsx  IconPicker.tsx  ManualAccounts.tsx  PaletteMenu.tsx  ReceiptEditor.tsx  SplitEditor.tsx  TicketImport.tsx  UpdateBanner.tsx
src/components/charts/: EChart.tsx  nivo-alts.tsx  nivo-pro.tsx  nivo.tsx  options.ts  useBarStyle.ts  useChartPalette.ts
src/data/: accounts.ts  backup.ts  budgets.ts  categories.ts  dashboard.ts  filters.ts  forecast.ts  goals.ts  investments.ts  receipts.ts  reconcile.ts  review.ts  rules.ts  scheduled.ts  settings.ts  splits.ts  stats.ts  tags.ts  tickets.ts  transactions.ts
src/db/: database.ts  schema.ts  seed.ts
src/import/: bbvaParser.ts  categorize.ts  importStatement.ts  loadPdf.ts  openbankParser.ts  unicajaParser.ts
src/lib/: barStyles.ts  csv.ts  donut.ts  forecast.ts  format.ts  goals.ts  icons.tsx  palettes.ts  receiptParse.ts  schedule.ts  text.ts  ticketMatch.ts  widgetLook.ts
src/rules/: categoryRules.ts
src/state/: AppContext.tsx
src/views/: Ajustes.tsx  Categorizar.tsx  Dashboard.tsx  Importar.tsx  Inversiones.tsx  Metas.tsx  Movimientos.tsx  Presupuestos.tsx  Programados.tsx  Reglas.tsx
src/widgets/: proWidgets.tsx  useWidgetLook.ts  widgets.tsx
tests/: categorize.test.ts  forecast.test.ts  goals.test.ts  parser.test.ts  receiptParse.test.ts  reconcile.test.ts  schedule.test.ts  ticketMatch.test.ts
