[package]
name = "financias"
version = "0.11.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "financias_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OCR nativo de Windows (Windows.Media.Ocr). Solo se compila en Windows.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Foundation",
  "Foundation_Collections",
  "Storage",
  "Storage_Streams",
  "Graphics_Imaging",
  "Media_Ocr",
  "Win32_System_Com",
] }

# OCR nativo de macOS (Apple Vision). Solo se compila en macOS.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSString", "NSURL", "NSArray", "NSDictionary"] }
objc2-core-graphics = { version = "0.3", features = ["CGImage", "CGColorSpace"] }
core-foundation = "0.10"
core-graphics = "0.24"

